# goalgetter_client

./: .gitignore  Dockerfile  README.md  env.example  main.py  mcp_client_pydantic.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  setup_webhook.py  test_api.py  test_telegram_api.py
config/: __init__.py  prompts.py  settings.py
src/: __init__.py
src/agents/: core.py  mcp_wrapper.py  productivity_agent.py
src/api/: __init__.py  main.py  models.py
src/cli/: __init__.py  cli.py
src/models/: __init__.py  responses.py  schemas.py
src/services/: __init__.py  conversation_service.py  mcp_service.py  memory_service.py  user_service.py
src/utils/: __init__.py  logging.py  message_utils.py  token_utils.py
tests/: __init__.py
